--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,23 @@ Package: GSEABaseReplacement
 Title: Checking GSEABase replacements
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Lluís",
+           family = "Revilla Sancho",
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Uses travis to test if BaseSet, BiocSet and uniset can do the same 
-            as GSEABase
+            as GSEABase.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Remotes:
+    llrs/BaseSet,
+    Kayla-Morrell/GeneSet@BiocSet
+    kevinrue/uniset
+Imports: 
+    GSEABase
